--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,47 @@
-/*Name: Rajvansh Singh 
-  Student Number: 8862041*/
-body{
-    font:16px Arial, sans-serif;
-    background-color: hsla(200,50%,70%,0.8);
-    height:100vh;
-    width:100vw;
+/* Student Name: Rajvansh Singh
+   Student Number: 8862041 */
+
+   .structural {
+    padding: 10px;
+    border: 1px solid #000;
+    margin: 10px;
 }
-h2{
-  color: #45c;
-  font-size:1.5rem;
+
+header {
+    background-color: hsl(69, 87%, 47%); /* Header background color */
+}
+
+main {
+  float:left;
+  width:65vw;
+    background-color: hsl(120, 50%, 90%); /* Main background color */
+    height:60vh;
+}
+
+aside {
+    float: right;
+    width: 25vw; 
+    background-color: hsl(180, 50%, 90%); /* Aside background color */
+    height:60vh;
+}
+
+footer {
+    clear: both;
+    background-color: hsl(240, 50%, 90%); /* Footer background color */
+}
+
+#paragraph1 {
+    color: rgba(235, 15, 194, 0.896); /* Red font color for paragraph 1 */
+}
+
+#paragraph2 {
+    color: rgb(0, 0, 255); /* Blue font color for paragraph 2 */
+}
+
+a:hover {
+    color: #f00; /* Red font color on hover for links */
+}
+
+footer p {
+    font-size: .75em;
 }
